sefkhet-abwy/base/deploymentconfig.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: sefkhet-abwy-webhook-receiver
spec:
  replicas: 1
  test: false
  selector:
    deploymentconfig: sefkhet-abwy-webhook-receiver
    app.kubernetes.io/name: sefkhet-abwy
    app.kubernetes.io/component: webhook-receiver
    app.kubernetes.io/managed-by: aicoe-thoth-devops
  template:
    metadata:
      labels:
        deploymentconfig: sefkhet-abwy-webhook-receiver
        app.kubernetes.io/name: sefkhet-abwy
        app.kubernetes.io/component: webhook-receiver
        app.kubernetes.io/managed-by: aicoe-thoth-devops
    spec:
      containers:
        - name: sefkhet-abwy-webhook-receiver
          image: sefkhet-abwy
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/app-root/etc/gcloud
              name: sesheta-pubsub-consumer
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: sesheta-pubsub-consumer
          secret:
            defaultMode: 420
            secretName: sesheta-pubsub-consumer
